--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 				<img src="img/03.jpg" alt="">
 				<img src="img/04.jpg" alt="">
 				<img src="img/05.jpg" alt=""> -->
+				<button id="myBtn">GO</button>
 			</div>
 
 			<!-- div con le miniature -->
